@@ -332,14 +332,34 @@
 		</area>
 	</discusage>
 
-	<devices> 
+	<devices mode="light" delay="0" fadetime="0">
+		<area condition="eq({indexmainMenuOrientation},0)++eq({indexwidgets},1)" x="{areawidth}*0.798" y="80%" width="16%" height="12%" layer="3">
+			<loop name="devices" x="0" y="3%" orientation="vertical" columnwidth="{areawidth}" rowheight="{areaheight}/2" overflow="cut">
+				<drawtext name="label" x="5" y="{areaheight}*0.04" font="{light}" fontsize="{rowheight}*0.35" color="{clrLightGray}" text="{devices[num]}: {devices[type]}" />
+				<drawimage cache="true" x="80%" y="8%" imagetype="channellogo" path="{devices[channelid]}" width="20%" height="25%" />
+				<drawtext condition="{devices[recording]} ++ {devices[livetv]}" x="{width(label)}*1.4" y="{areaheight}*0.03" font="{light}" fontsize="{rowheight}*0.35" color="{clrRed}" text="LiveTV, Recording" />
+				<drawtext condition="{devices[recording]} ++ not{devices[livetv]}" x="{width(label)}*1.4" y="{areaheight}*0.03" font="{light}" fontsize="{rowheight}*0.35" color="{clrRed}" text="Recording" />
+				<drawtext condition="not{devices[recording]} ++ {devices[livetv]}" x="{width(label)}*1.4" y="{areaheight}*0.03" font="{light}" fontsize="{rowheight}*0.35" color="{clrLightGray}" text="LiveTV" />
+				<drawtext x="5" y="{rowheight}*0.4" font="{light}" fontsize="{rowheight}*0.35" color="{clrLightGray}" text="{devices[channelname]}" />
+			</loop>
+		</area>
+		<area condition="eq({indexmainMenuOrientation},1)++eq({indexwidgets},1)" x="4%" y="80%" width="16%" height="12%" layer="3">
+			<loop name="devices" x="0" y="3%" orientation="vertical" columnwidth="{areawidth}" rowheight="{areaheight}/2" overflow="cut">
+				<drawtext name="label" x="5" y="{areaheight}*0.04" font="{light}" fontsize="{rowheight}*0.35" color="{clrLightGray}" text="{devices[num]}: {devices[type]}" />
+				<drawimage cache="true" x="80%" y="8%" imagetype="channellogo" path="{devices[channelid]}" width="20%" height="25%" />
+				<drawtext condition="{devices[recording]} ++ {devices[livetv]}" x="{width(label)}*1.4" y="{areaheight}*0.03" font="{light}" fontsize="{rowheight}*0.35" color="{clrRed}" text="LiveTV, Recording" />
+				<drawtext condition="{devices[recording]} ++ not{devices[livetv]}" x="{width(label)}*1.4" y="{areaheight}*0.03" font="{light}" fontsize="{rowheight}*0.35" color="{clrRed}" text="Recording" />
+				<drawtext condition="not{devices[recording]} ++ {devices[livetv]}" x="{width(label)}*1.4" y="{areaheight}*0.03" font="{light}" fontsize="{rowheight}*0.35" color="{clrLightGray}" text="LiveTV" />
+				<drawtext x="5" y="{rowheight}*0.4" font="{light}" fontsize="{rowheight}*0.35" color="{clrLightGray}" text="{devices[channelname]}" />
+			</loop>
+		</area>
 	</devices>
-	
-	<temperatures condition="gt({indexpanelMain},0)" delay="0" fadetime="{fadetimeTempsLoadWeatherDisc}" >
+
+	<temperatures condition="gt({indexpanelMain},0)++eq({indexwidgets},0)" delay="0" fadetime="{fadetimeTempsLoadWeatherDisc}" >
 		<area condition="eq({indexmainMenuOrientation},0)" x="81%" y="80%" width="14%" height="6%" layer="3">
 			<drawtext x="0" valign="center" font="{light}" fontsize="60%" color="{clrLightGray}" text="CPU: {cputemp}°C  GPU: {gputemp}°C"/>
 		</area>
-		<area condition="eq({indexmainMenuOrientation},1)" x="4%" y="80%" width="14%" height="6%" layer="3">
+		<area condition="eq({indexmainMenuOrientation},1)++eq({indexwidgets},0)" x="4%" y="80%" width="14%" height="6%" layer="3">
 			<drawtext x="0" valign="center" font="{light}" fontsize="60%" color="{clrLightGray}" text="CPU: {cputemp}°C  GPU: {gputemp}°C"/>
 		</area>
 	</temperatures>
@@ -367,11 +387,11 @@
 		</areacontainer>
 	</currentweather>
 
-	<systemload condition="gt({indexpanelMain},0)" delay="0" fadetime="{fadetimeTempsLoadWeatherDisc}" >
+	<systemload condition="gt({indexpanelMain},0)++eq({indexwidgets},0)" delay="0" fadetime="{fadetimeTempsLoadWeatherDisc}" >
 		<area condition="eq({indexmainMenuOrientation},0)" x="81%" y="86%" width="14%" height="6%" layer="3">
 			<drawtext x="0" valign="center" font="{light}" fontsize="60%" color="{clrLightGray}" text="System Load: {load}" />
 		</area>
-		<area condition="eq({indexmainMenuOrientation},1)" x="4%" y="86%" width="14%" height="6%" layer="3">
+		<area condition="eq({indexmainMenuOrientation},1)++eq({indexwidgets},0)" x="4%" y="86%" width="14%" height="6%" layer="3">
 			<drawtext x="0" valign="center" font="{light}" fontsize="60%" color="{clrLightGray}" text="System Load: {load}" />
 		</area>
 	</systemload>
